# psi-shell

./: Cargo.toml  README.md  flake.nix  rustfmt.toml  shell.nix
src/: audio.rs  clock.rs  main.rs  notification.rs  process.rs  screen.rs  system.rs  wifi.rs  wm.rs
src/gtk/: circular_progress.rs  gauge.rs  icon.rs  mod.rs
src/gtk/bar/: clock.rs  metrics.rs  mod.rs  tweaks.rs  wifi.rs  workspace.rs  workspaces.rs
src/gtk/desktop/: mod.rs
src/gtk/notification_popup/: mod.rs
