[package]

name = "psi-shell"
version = "0.1.0"
edition = "2021"

[dependencies]

gtk = { version = "0.15", features = [ "v3_22" ] }
gtk-layer-shell = "0.4.3"

cairo-rs = "0.15"

chrono = "0.4"
itertools = "0.10"
once_cell = "1.14"
futures = "0.3"
derive_more = "0.99"

sysinfo = "0.26"

log = "0.4"
pretty_env_logger = "0.4"

serde_derive = "1"
serde_json = "1"
serde = "1"
